--- a/AutoClick/Pages/AnunciarEmpresa.cshtml
+++ b/AutoClick/Pages/AnunciarEmpresa.cshtml
@@ -840,7 +840,7 @@
             <div class="contact-overlay"></div>
             <div class="contact-content">
                 <div class="contact-text">
-                    <h2 class="contact-title">Hablemos de cómo tu marca puede brillar en AutoClick.cr</h2>
+                    <h2 class="contact-title">Hablemos de cómo su marca puede brillar en AutoClick.cr</h2>
                 </div>
             
             <div class="contact-form">
