--- a/AutoClick/Pages/Auth.cshtml
+++ b/AutoClick/Pages/Auth.cshtml
@@ -42,7 +42,7 @@
                                         <h3 class="type-title">Persona Individual</h3>
                                         <p class="type-description">Ideal para usuarios que quieren comprar o vender su auto personal</p>
                                         <ul class="type-features">
-                                            <li>Publicar hasta 3 autos gratis</li>
+                                            <li>Publicar su vehículo personal sin ningún costo</li>
                                             <li>Acceso completo a búsquedas</li>
                                             <li>Guardados ilimitados</li>
                                         </ul>
