--- a/AutoClick/Pages/Producto.cshtml
+++ b/AutoClick/Pages/Producto.cshtml
@@ -306,10 +306,10 @@
                     <!-- Logo TariFlash y subtítulo -->
                     <div class="marchamo-tari-header">
                         <div class="marchamo-tari-logo">
-                            <!-- Placeholder para logo TariFlash (255x48px) -->
-                            <svg width="255" height="48" viewBox="0 0 255 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <text x="10" y="35" font-family="Montserrat" font-weight="700" font-size="28" fill="#FF8500">TariFlash</text>
-                            </svg>
+                            <!-- Logo TariFlash -->
+                            <img src="https://autoclickstorage.blob.core.windows.net/logos/tariflash-logo.png" 
+                                 alt="TariFlash" 
+                                 style="width: 100%; height: 100%; object-fit: contain;" />
                         </div>
                         <p class="marchamo-tari-subtitle">Calculadora de marchamo y traspaso</p>
                     </div>
@@ -757,7 +757,7 @@ function toggleFavorite(vehicleId) {
 }
 
 .producto-marchamo {
-    margin-top: 48px;
+    margin-top: 24px;
 }
 
 /* Marchamo Calculator - TariFlash Design */
