--- a/AutoClick/wwwroot/css/anunciar-auto.css
+++ b/AutoClick/wwwroot/css/anunciar-auto.css
@@ -371,6 +371,9 @@ select#ano option {
 .equipment-item input[type="checkbox"] {
     width: 42px;
     height: 42px;
+    min-width: 42px;
+    min-height: 42px;
+    flex-shrink: 0;
     border: 0.89px solid white;
     border-radius: 2px;
     background: transparent;
@@ -384,6 +387,7 @@ select#ano option {
     font-weight: 500;
     cursor: pointer;
     margin: 0;
+    flex: 1;
 }
 
 /* Visibility Plans */
@@ -629,8 +633,8 @@ select#ano option {
 }
 
 .payment-option input[type="checkbox"] {
-    width: 16px;
-    height: 16px;
+    width: 42px;
+    height: 42px;
     border: 0.89px solid white;
     border-radius: 2px;
     background: transparent;
