--- a/AutoClick/Pages/Shared/_Footer.cshtml
+++ b/AutoClick/Pages/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 <!-- Footer Universal -->
-<div style="width: 100%; height: 304px; background: #030D2B; overflow: hidden; border-top: 0.50px rgba(255, 255, 255, 0.45) solid; position: relative;">
+<div style="width: 100%; min-height: 340px; background: #030D2B; overflow: visible; border-top: 0.50px rgba(255, 255, 255, 0.45) solid; position: relative; padding-bottom: 20px;">
     <div style="left: 444.50px; top: 45px; position: absolute; justify-content: center; align-items: flex-start; gap: 62px; display: inline-flex">
         <div style="width: 193px; height: 173px; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: inline-flex">
             <div style="align-self: stretch; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 40px; display: inline-flex">
